2005-03-12  Todd Berman  <tberman@off.net>

	* DockItemGrip.cs: use .SetMarkup, not .SetText

2005-03-13  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItemGrip.cs, DockMaster.cs: Fix potential memory leaks.

2005-02-28  John Luke  <john.luke@gmail.com>

	* DockBarButton.cs: new Button wrapper
	* DockBar.cs: fix iconfiy/uniconify
	* DockItem.cs: add item to dockbar on iconify
	* DockItemGrip.cs: fix warning by adding new to Item prop

2005-02-18  John Luke  <john.luke@gmail.com>

	* Gdl.mdsx
	* Gdl.cmbx
	* Makefile.Gdl
	* Makefile.solution.Gdl
	* make.sh
	* DockTest.cmbx: these were broken
	just kill it unless someone puts back a working project

	* DockItemGrip.cs
	* DockPlaceholder.cs
	* DockItem.cs
	* DockBar.cs: use WidgetFlags

	* Makefile: use this to build for now